feat: add doc to updateOpening
